--- a/JDBCTest/nbproject/private/private.properties
+++ b/JDBCTest/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\caio.aluzano\\Downloads\\mysql-connector-java-8.0.12\\mysql-connector-java-8.0.12\\mysql-connector-java-8.0.12.jar
 user.properties.file=C:\\Users\\caio.aluzano\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
